syntax = "proto3";

option csharp_namespace = "ShireBank.Shared";

package ShireBank.Shared.Inspector;

service Inspector {
  rpc GetFullSummary (GetFullSummaryRequest)
	returns (stream GetFullSummaryReply);

  rpc StartInspection (StartInspectionRequest)
	returns (StartInspectionReply);

  rpc FinishInspection (FinishInspectionRequest)
	returns (FinishInspectionReply);
}

message GetFullSummaryRequest {}
message GetFullSummaryReply {
	string summary = 1;
}

message StartInspectionRequest {}
message StartInspectionReply {}

message FinishInspectionRequest {}
message FinishInspectionReply {}
